--- a/QuizService/src/main/resources/application.properties
+++ b/QuizService/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.application.name=Quiz-Service
-spring.datasource.url=jdbc:mysql://localhost:3306/microservies
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/microservies}
+spring.datasource.username=${DB_USER:springstudent}
+spring.datasource.password=${DB_PASS:springstudent}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8085
+question.service.url=${question_service_url:http://localhost:8086}
+spring.cloud.openfeign.lazy-attributes-resolution=true
 
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 resilience4j.circuitbreaker.instances.QuestionBreaker.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.QuestionBreaker.failureRateThreshold=50
